fix: Margin for text was too small

--- a/css/about.css
+++ b/css/about.css
@@ -22,6 +22,6 @@
 @media (min-width: 1024px) {
 
     .about {
-        margin: 20px 250px;
+        margin: 20px 450px;
     }
 }
